syntax = "proto3";

option csharp_namespace = "Utilities.Billing.Api.Protos";

import "Protos/data.proto";

package billing;

service AccountsService 
{
  rpc AddAccountType(AddAccountTypeRequest) returns (AddAccountTypeResponse);

  rpc GetAccountTypes(GetAccountTypesRequest) returns (GetAccountTypesResponse);

  rpc GetAccountType(GetAccountTypeRequest) returns (GetAccountTypeResponse);

  rpc UpdateAccountType(UpdateAccountTypeRequest) returns (UpdateAccountTypeResponse);

  rpc DeleteAccountType(DeleteAccountTypeRequest) returns (DeleteAccountTypeResponse);

  rpc AddAccount(AddAccountRequest) returns (AddAccountResponse);

  rpc GetAccounts(GetAccountsRequest) returns (GetAccountsResponse);

  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);

  rpc UpdateAccount(UpdateAccountRequest) returns (UpdateAccountResponse);

  rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse);

  rpc GetAccountHolder(GetAccountHolderRequest) returns (GetAccountHolderResponse);

  rpc AddAccountHolder(AddAccountHolderRequest) returns (AddAccountHolderResponse);

  rpc UpdateAccountHolder(UpdateAccountHolderRequest) returns (UpdateAccountHolderResponse);

  rpc DeleteAccountHolder(DeleteAccountHolderRequest) returns (DeleteAccountHolderResponse);

  rpc GetAccountHolders(GetAccountHoldersRequest) returns (GetAccountHoldersResponse);
}

/* Account Type */

message GetAccountTypeRequest {
  uint64 id = 1;
  string tenantId = 2;
}

message GetAccountTypeResponse {
  AccountType accountType = 1;
}
message GetAccountTypesRequest {
  string tenantId = 1;
  uint32 offset = 2;
  uint32 limit = 3;
}

message GetAccountTypesResponse {
  repeated AccountType accountTypes = 2;
}

message AddAccountTypeRequest {
  string tenantId = 1;
  string name = 2;
  string token = 3;
}


message AddAccountTypeResponse {
  uint64 id = 1;
}

message UpdateAccountTypeRequest {
  string tenantId = 1;
  uint64 id = 2;
  optional string name = 3;
  optional string token = 4;

}

message UpdateAccountTypeResponse {
}

message DeleteAccountTypeRequest {
  string tenantId = 1;
  uint64 id = 2;
}

message DeleteAccountTypeResponse {
}

/* Account Holder */

message GetAccountHolderRequest {
  string tenantId = 1;
  uint64 id = 2;
}

message GetAccountHolderResponse {
  AccountHolder accountHolder =  1;
}

message GetAccountHoldersRequest {
  string tenantId = 1;
  uint32 offset = 2;
  uint32 limit = 3;
}

message GetAccountHoldersResponse {
  repeated AccountHolder accountHolders = 1;
}

message AddAccountHolderRequest {
  string tenantId = 1;
  string wallet = 2;
}

message AddAccountHolderResponse {
  uint64 id = 1;
}

message UpdateAccountHolderRequest {
  string tenantId = 1;
  uint64 id = 2;
  string wallet = 3;
}

message UpdateAccountHolderResponse {
}

message DeleteAccountHolderRequest {
  string tenantId = 1;
  uint64 id = 2;
}

message DeleteAccountHolderResponse {
}

/* Account */

message GetAccountsRequest {
  string tenantId = 1;
  uint32 offset = 2;
  uint32 limit = 3;
}

message GetAccountsResponse {
  repeated Account accounts = 1;
}

message GetAccountRequest {
  string tenantId = 1;
  uint64 id = 2;
}

message GetAccountResponse {
  ExtendedAccount account = 1;
}

message AddAccountRequest {
  string tenantId = 1;
  uint64 accountHolderId = 2;
  uint64 accountTypeId = 3;
}

message AddAccountResponse {
  uint64 id = 1;
}

message UpdateAccountRequest {
  string tenantId = 1;
  uint64 id = 2;
  optional uint64 accountHolderId = 3;
  optional uint64 accountTypeId = 4;
}

message UpdateAccountResponse { 
}

message DeleteAccountRequest {
  string tenantId = 1;
  uint64 id = 2;
}

message DeleteAccountResponse {
}